# openreferee

./: .env  .gitignore  README.md  lint-staged.config.js  package-lock.json  package.json  requirements.dev.txt  requirements.txt  server.py  setup.cfg  setup.py
.github/workflows/: main.yml
openreferee_server/: __init__.py  app.py  db.py  defaults.py  models.py  operations.py  schemas.py  server.py
specs/: openreferee.yaml
