[metadata]
name = openreferee-reference-server
url = https://github.com/indico/openreferee
author = Indico Team
author_email = indico-team@cern.ch
version = 0.0.1
license = MIT
description = OpenReferee Reference Server

[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
include_package_data = True
install_requires =
  werkzeug
  flask
  flask-sqlalchemy
  flask-cors
  requests
  sqlalchemy
  webargs
  psycopg2
  apispec[yaml]
  apispec-webframeworks

[pycodestyle]
exclude=__pycache__
max-line-length=89

[flake8]
exclude=__pycache__
max-line-length=89
